@@ -1,3 +1,3 @@
-# mean, investigation_time=1.0, imt="PGA", checksum=4164139546
+# mean, investigation_time=1.0, imt="PGA", checksum=2025568680
 lon,lat,depth,poe-0.1,poe-0.4,poe-0.6
 0.00000,0.00000,0.00000,7.495689E-01,8.109398E-02,5.697990E-03
