@@ -1,3 +1,3 @@
-# mean, investigation_time=1.0, imt="PGA", checksum=1714034978
+# mean, investigation_time=1.0, imt="PGA", checksum=751573168
 lon,lat,depth,poe-0.1,poe-0.4,poe-0.6,poe-1.0
 0.00000,0.00000,0.00000,1.665279E-03,0.000000E+00,0.000000E+00,0.000000E+00
