@@ -1,7 +1,7 @@
 [general]
 description = event based hazard
 calculation_mode = event_based
-split_sources = false
+fast_sampling = true
 random_seed = 24
 
 [sites]
